--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -119,18 +119,20 @@
               <div class="line"></div>
             </div>
             <div class="step-content">
-              <form class="ty-card ty-review-card">
+              <!-- Step 1: Review Contact Details -->
+              <div id="step1" class="ty-card ty-review-card">
                 <h3>Review Your Contact Details</h3>
                 <div class="ty-form-group-parent">
-                  <label for="email">Email ID (Optional)</label>
+                  <label>Email ID (Optional)</label>
                   <div class="ty-form-group">
                     <input
                       type="email"
-                      name="email"
-                      id=""
-                      placeholder="Ravi@gmail.com"
+                      id="currentEmail"
+                      value="Ravi@gmail.com"
+                      disabled
                     />
                     <svg
+                      onclick="goToEdit()"
                       xmlns="http://www.w3.org/2000/svg"
                       width="19"
                       height="19"
@@ -152,72 +154,59 @@
                         stroke-linecap="round"
                         stroke-linejoin="round"
                       />
-                      <path
-                        d="M11.8047 3.2854C12.3351 5.17748 13.8155 6.6579 15.7155 7.19623"
-                        stroke="#666666"
-                        stroke-opacity="0.6"
-                        stroke-miterlimit="10"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      />
                     </svg>
                   </div>
                 </div>
-                <!-- Phone Number Input with Country Dropdown -->
+
                 <div class="ty-form-group-parent">
-                  <label for="email">Whatsapp Number</label>
+                  <label>WhatsApp Number</label>
                   <div class="ty-form-group">
-                    <div class="phone-input">
-                      <input
-                        type="tel"
-                        id="phone"
-                        name="phone"
-                        placeholder="WhatsApp Number*"
-                        required
-                      />
-                    </div>
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="19"
-                      height="19"
-                      viewBox="0 0 19 19"
-                      fill="none"
-                    >
-                      <path
-                        d="M8.70898 1.58325H7.12565C3.16732 1.58325 1.58398 3.16659 1.58398 7.12492V11.8749C1.58398 15.8333 3.16732 17.4166 7.12565 17.4166H11.8757C15.834 17.4166 17.4173 15.8333 17.4173 11.8749V10.2916"
-                        stroke="#666666"
-                        stroke-opacity="0.6"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      />
-                      <path
-                        d="M12.698 2.39067L6.45966 8.629C6.22216 8.8665 5.98466 9.33358 5.93716 9.674L5.59674 12.0569C5.47008 12.9198 6.07966 13.5215 6.94258 13.4028L9.32549 13.0623C9.65799 13.0148 10.1251 12.7773 10.3705 12.5398L16.6088 6.3015C17.6855 5.22483 18.1922 3.974 16.6088 2.39067C15.0255 0.807334 13.7747 1.314 12.698 2.39067Z"
-                        stroke="#666666"
-                        stroke-opacity="0.6"
-                        stroke-miterlimit="10"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      />
-                      <path
-                        d="M11.8047 3.2854C12.3351 5.17748 13.8155 6.6579 15.7155 7.19623"
-                        stroke="#666666"
-                        stroke-opacity="0.6"
-                        stroke-miterlimit="10"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      />
-                    </svg>
+                    <input
+                      type="tel"
+                      id="phoneNumber"
+                      value="+91 8269989915"
+                      disabled
+                    />
                   </div>
                 </div>
+
                 <span
                   >Issue registering mobile number?
-                  <a
-                    target="_blank"
-                    href="https://api.whatsapp.com/send/?phone=917499014868&text&type=phone_number&app_absent=0"
-                    >Contact Us</a
-                  ></span
+                  <a href="#">Contact Us</a></span
                 >
-              </form>
+              </div>
+
+              <!-- Step 2: Edit Email -->
+              <div id="step2" class="ty-card" style="display: none">
+                <h3>New Email</h3>
+                <div class="ty-form-group">
+                  <label>New Email</label>
+                  <input
+                    type="email"
+                    id="newEmail"
+                    placeholder="Enter new email"
+                  />
+                </div>
+                <button class="ty-button" onclick="updateEmail()">
+                  Update Email
+                </button>
+                <button class="ty-back-button" onclick="goBack()">⬅️</button>
+              </div>
+
+              <!-- Step 3: Verify Email -->
+              <div id="step3" class="ty-card" style="display: none">
+                <h3>
+                  We have sent a code to
+                  <span id="displayEmail">example@gmail.com</span>
+                </h3>
+                <div class="ty-form-group">
+                  <input type="text" id="otp" placeholder="Enter OTP" />
+                </div>
+                <button class="ty-button" onclick="verifyOtp()">
+                  Verify Account
+                </button>
+                <button class="ty-back-button" onclick="goBack()">⬅️</button>
+              </div>
             </div>
           </div>
 
@@ -329,6 +318,41 @@
   </body>
   <!-- Intl-Tel-Input JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@19.5.3/build/js/intlTelInput.min.js"></script>
+
+  <!-- Form -->
+  <script>
+    function goToEdit() {
+        document.getElementById("step1").style.display = "none";
+        document.getElementById("step2").style.display = "block";
+    }
+
+    function updateEmail() {
+        let newEmail = document.getElementById("newEmail").value;
+        if (newEmail) {
+            document.getElementById("displayEmail").textContent = newEmail;
+            document.getElementById("step2").style.display = "none";
+            document.getElementById("step3").style.display = "block";
+        } else {
+            alert("Please enter a valid email.");
+        }
+    }
+
+    function verifyOtp() {
+        let otp = document.getElementById("otp").value;
+        if (otp.length === 4) {
+            document.getElementById("currentEmail").value = document.getElementById("displayEmail").textContent;
+            goBack();
+        } else {
+            alert("Enter a valid 4-digit OTP.");
+        }
+    }
+
+    function goBack() {
+        document.getElementById("step1").style.display = "block";
+        document.getElementById("step2").style.display = "none";
+        document.getElementById("step3").style.display = "none";
+    }
+</script>
 </html>
 
 <!-- <div>
