github issue fixed

--- a/index.html
+++ b/index.html
@@ -120,6 +120,30 @@
               </p>
             </div>
           </div>
+          <hr style="margin: 16px 0px" />
+          <div class="session-counter-hero">
+            <h3>Challenge starting in</h3>
+            <div class="session-counter-inner m-0">
+              <div class="counter-card-container-hero">
+                <div class="counter-card-hero">
+                  <h6>02</h6>
+                  <p>Days</p>
+                </div>
+                <div class="counter-card-hero">
+                  <h6>02</h6>
+                  <p>Days</p>
+                </div>
+                <div class="counter-card-hero">
+                  <h6>02</h6>
+                  <p>Days</p>
+                </div>
+                <div class="counter-card-hero">
+                  <h6>02</h6>
+                  <p>Days</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div
           class="video-section"
@@ -1665,9 +1689,9 @@
                     </div>
                     <div class="testimoni-text-div">
                       <p class="testimoni-text text-left p-0 pt-20">
-                        I <strong>lost 8 kgs in just 21 days</strong> and gained so much
-                        more—energy, confidence, and a new outlook on life. This
-                        workshop isn’t just about weight loss; it’s a
+                        I <strong>lost 8 kgs in just 21 days</strong> and gained
+                        so much more—energy, confidence, and a new outlook on
+                        life. This workshop isn’t just about weight loss; it’s a
                         transformation.
                       </p>
                     </div>
@@ -1701,7 +1725,8 @@
                     </div>
                     <div class="testimoni-text-div">
                       <p class="testimoni-text text-left p-0 pt-20">
-                        Apart from <strong>building such important habits,</strong> I have
+                        Apart from
+                        <strong>building such important habits,</strong> I have
                         laughed, danced, looked inwards, got inspired by
                         everyone's posts and most importantly, stepped out of my
                         comfort zone.
@@ -1738,9 +1763,10 @@
                     <div class="testimoni-text-div">
                       <p class="testimoni-text text-left p-0 pt-20">
                         The 21 days of this workshop were the most beautiful
-                        days of my life. The <strong>sessions were soo soo good</strong> that it
-                        made me jump out of the bed since day one. Each and
-                        every session is etched deeply in my heart.
+                        days of my life. The
+                        <strong>sessions were soo soo good</strong> that it made
+                        me jump out of the bed since day one. Each and every
+                        session is etched deeply in my heart.
                       </p>
                     </div>
                   </div>
@@ -1775,8 +1801,9 @@
                       <p class="testimoni-text text-left p-0 pt-20">
                         I had extremely strained relationship with my in-laws.
                         After the session, I apologized to them. It was
-                        difficult but so worth it. I felt a <strong>lightness in my
-                          heart,</strong> as if years of weight had finally lifted.
+                        difficult but so worth it. I felt a
+                        <strong>lightness in my heart,</strong> as if years of
+                        weight had finally lifted.
                       </p>
                     </div>
                   </div>
@@ -1810,8 +1837,9 @@
                     <div class="testimoni-text-div">
                       <p class="testimoni-text text-left p-0 pt-20">
                         The knowledge was extremely empowering. Now when I go to
-                        restaurants or parties, <strong>my body doesn't crave pizza and
-                          pasta.</strong> I can sense a natural self control within me.
+                        restaurants or parties,
+                        <strong>my body doesn't crave pizza and pasta.</strong>
+                        I can sense a natural self control within me.
                       </p>
                     </div>
                   </div>
@@ -1846,8 +1874,8 @@
                       <p class="testimoni-text text-left p-0 pt-20">
                         This workshop changed my views towards everything. Since
                         I joined and followed these habits, I lost 4 kg. My hair
-                        shines. My skin is not dry or oily anymore. My <strong>acne has
-                          been reduced or almost gone.</strong>
+                        shines. My skin is not dry or oily anymore. My
+                        <strong>acne has been reduced or almost gone.</strong>
                       </p>
                     </div>
                   </div>
@@ -2021,10 +2049,11 @@
                     </div>
                     <div class="testimoni-text-div">
                       <p class="testimoni-text text-left p-0 pt-20">
-                        During the course of 21 days, <strong>I saw my relationships
-                          improving.</strong> I began to find the purpose of my life. I
-                        used to look forward to every upcoming session. The
-                        whole challenge was so inspiring.
+                        During the course of 21 days,
+                        <strong>I saw my relationships improving.</strong> I
+                        began to find the purpose of my life. I used to look
+                        forward to every upcoming session. The whole challenge
+                        was so inspiring.
                       </p>
                     </div>
                   </div>
@@ -2059,9 +2088,9 @@
                     <div class="testimoni-text-div">
                       <p class="testimoni-text text-left p-0 pt-20">
                         During these 21 days, the sessions became the best part
-                        of my day. This workshop has <strong>transformed my life</strong> in ways
-                        words can't capture—it’s a feeling that can only be
-                        experienced.
+                        of my day. This workshop has
+                        <strong>transformed my life</strong> in ways words can't
+                        capture—it’s a feeling that can only be experienced.
                       </p>
                     </div>
                   </div>
@@ -2095,8 +2124,8 @@
                       <p class="testimoni-text text-left p-0 pt-20">
                         Before this workshop, I felt like sleeping throughout
                         the day. The simple habit of eating early dinner has
-                        <strong>uplifted my energy levels</strong> like anything. I feel so much
-                        more energetic.
+                        <strong>uplifted my energy levels</strong> like
+                        anything. I feel so much more energetic.
                       </p>
                     </div>
                   </div>
@@ -2128,10 +2157,11 @@
                     </div>
                     <div class="testimoni-text-div">
                       <p class="testimoni-text text-left p-0 pt-20">
-                        This workshop has given me <strong>immense self-control.</strong> I used
-                        to have my dinner at 6:30, and attend the parties. To my
-                        sheer surprise, I wasn't tempted to eat anything, even
-                        at a single party.
+                        This workshop has given me
+                        <strong>immense self-control.</strong> I used to have my
+                        dinner at 6:30, and attend the parties. To my sheer
+                        surprise, I wasn't tempted to eat anything, even at a
+                        single party.
                       </p>
                     </div>
                   </div>
@@ -2583,7 +2613,7 @@
                       technology has to offer.
                     </p>
                   </div>
-                  <span class="read-more-text button">
+                  <button class="read-more-text button">
                     Read More
                     <img
                       alt="Arrow Icon"
@@ -2595,7 +2625,7 @@
                       class="ml-2 transform cursor-pointer"
                       src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/yoga/down-arrow.svg"
                     />
-                  </span>
+                  </b>
                 </div>
 
                 <div class="card host-details">
@@ -2680,19 +2710,32 @@
                     />
                     <div class="form-error">Please enter name</div>
                   </div>
-                  <div class="width-responsive">
+                  <div class="width-responsive phone-input">
+                    <input
+                      class="w-full form-input"
+                      type="tel"
+                      id="phone"
+                      name="phone"
+                      placeholder="WhatsApp Number*"
+                      required
+                    />
+                    <div class="form-error">
+                      Please enter valid WhatsApp Number
+                    </div>
+                  </div>
+                  <!-- <div class="width-responsive">
                     <input
                       class="form-input"
                       type="email"
                       placeholder="Email*"
                     />
                     <div class="form-error">Please enter valid email</div>
-                  </div>
+                  </div> -->
                 </div>
-                <div
+                <!-- <div
                   class="form-input-container w-full d-flex flex-responsive gap-20"
                 >
-                  <!-- Phone Number Input with Country Dropdown -->
+                  
                   <div class="width-responsive phone-input">
                     <input
                       class="w-full form-input"
@@ -2715,7 +2758,7 @@
                     />
                     <div class="form-error">Please enter city</div>
                   </div>
-                </div>
+                </div> -->
                 <div class="form-select">
                   <div>
                     <svg
