--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -224,7 +224,7 @@
               <div id="step3" class="ty-card" style="display: none">
                 <h3>
                   We have sent a code to
-                  <span id="displayEmail">example@gmail.com</span>
+                  <div id="displayEmail">example@gmail.com</div>
                 </h3>
                 <div class="ty-form-group">
                   <input type="text" id="otp" placeholder="Enter OTP" />
@@ -239,7 +239,6 @@
                   />
                 </button>
                 <button class="ty-back-button" onclick="goBack()">
-                  ⬅
                   <svg
                     width="27"
                     height="27"
