--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -173,7 +173,11 @@
 
                 <span
                   >Issue registering mobile number?
-                  <a href="#">Contact Us</a></span
+                  <a
+                    target="_blank"
+                    href="https://api.whatsapp.com/send/?phone=917499014868&text&type=phone_number&app_absent=0"
+                    >Contact Us</a
+                  ></span
                 >
               </div>
 
@@ -332,20 +336,20 @@
         <h4>Your First Session Starts In</h4>
         <div class="ty-counter-card-container">
           <div class="ty-counter-card">
-            <h6>02</h6>
-            <p>Days</p>
+            <h6 id="days">02</h6>
+            <p>days</p>
           </div>
           <div class="ty-counter-card">
-            <h6>02</h6>
-            <p>Days</p>
+            <h6 id="hours">01</h6>
+            <p>hours</p>
           </div>
           <div class="ty-counter-card">
-            <h6>02</h6>
-            <p>Days</p>
+            <h6 id="mins">02</h6>
+            <p>mins</p>
           </div>
           <div class="ty-counter-card">
-            <h6>02</h6>
-            <p>Days</p>
+            <h6 id="secs">02</h6>
+            <p>secs</p>
           </div>
         </div>
       </div>
@@ -371,7 +375,65 @@
   </body>
   <!-- Intl-Tel-Input JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@19.5.3/build/js/intlTelInput.min.js"></script>
+  <!-- Countdown timer -->
+  <script>
+    function startCountdown(targetDate) {
+      // Target date and time
+      const targetTime = new Date(targetDate).getTime();
 
+      // Update the countdown every 1 second
+      const interval = setInterval(function () {
+        const now = new Date().getTime();
+        const timeRemaining = targetTime - now;
+
+        if (timeRemaining <= 0) {
+          clearInterval(interval); // Stop the countdown once the time is reached
+          document.getElementById("days").innerText = "00";
+          document.getElementById("hours").innerText = "00";
+          document.getElementById("mins").innerText = "00";
+          document.getElementById("secs").innerText = "00";
+          return;
+        }
+
+        // Calculate days, hours, minutes, and seconds
+        const days = Math.floor(timeRemaining / (1000 * 60 * 60 * 24));
+        const hours = Math.floor(
+          (timeRemaining % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)
+        );
+        const minutes = Math.floor(
+          (timeRemaining % (1000 * 60 * 60)) / (1000 * 60)
+        );
+        const seconds = Math.floor((timeRemaining % (1000 * 60)) / 1000);
+
+        // Update the HTML elements
+        updateElementWithAnimation("days", days);
+        updateElementWithAnimation("hours", hours);
+        updateElementWithAnimation("mins", minutes);
+        updateElementWithAnimation("secs", seconds);
+      }, 1000);
+    }
+
+    function formatTime(unit) {
+      return unit < 10 ? "0" + unit : unit;
+    }
+
+    // Function to update element and apply animation
+    function updateElementWithAnimation(elementId, newValue) {
+      const element = document.getElementById(elementId);
+      element.innerText = formatTime(newValue);
+
+      // Add animation class
+      element.classList.add("slide-up");
+
+      // Remove the animation class after it's done
+      setTimeout(function () {
+        element.classList.remove("slide-up");
+      }, 500); // 500ms matches the animation duration
+    }
+
+    // Example usage: Start the countdown for a given date
+    startCountdown("February 20, 2025 12:00:00"); // Replace with your target date and time
+  </script>
   <!-- Form -->
   <script>
     function goToEdit() {
