github issue fixed

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 </div>
               </div>
               <div class="flip-card-back">
-                <p>Mark your calendar! The workshop is starting soon..</p>
+                <p>Mark your calendar! The workshop is starting soon.</p>
               </div>
             </div>
           </div>
@@ -195,7 +195,7 @@
                 </div>
               </div>
               <div class="flip-card-back">
-                <p>Because it takes 3 weeks to build a habit</p>
+                <p>Because it takes 3 weeks to build a habit.</p>
               </div>
             </div>
           </div>
@@ -218,7 +218,7 @@
               </div>
               <div class="flip-card-back">
                 <p>
-                  Recording for each session will be available for 24 hours..
+                  Recording for each session will be available for 24 hours.
                 </p>
               </div>
             </div>
@@ -1039,6 +1039,13 @@
           </div>
         </div>
         <hr class="divider mt-40" />
+        <div class="testimonial-heading-mobile mt-40">
+          <h2 class="whats-say-heading">What People Are Saying?</h2>
+          <p class="whats-say-subheading">
+            205,988+ people have already completed The Ultimate Health
+            Challenge
+          </p>
+        </div>
         <div id="testimonials" class="testimonial-div mt-40">
           <div class="testimonial-heading">
             <h2 class="whats-say-heading">What People Are Saying?</h2>
