github issue fixed

--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -168,6 +168,31 @@
                       value="+91 8269989915"
                       disabled
                     />
+                    <svg
+                      style="cursor: pointer"
+                      onclick="goToEditNumber()"
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="19"
+                      height="19"
+                      viewBox="0 0 19 19"
+                      fill="none"
+                    >
+                      <path
+                        d="M8.70898 1.58325H7.12565C3.16732 1.58325 1.58398 3.16659 1.58398 7.12492V11.8749C1.58398 15.8333 3.16732 17.4166 7.12565 17.4166H11.8757C15.834 17.4166 17.4173 15.8333 17.4173 11.8749V10.2916"
+                        stroke="#666666"
+                        stroke-opacity="0.6"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M12.698 2.39067L6.45966 8.629C6.22216 8.8665 5.98466 9.33358 5.93716 9.674L5.59674 12.0569C5.47008 12.9198 6.07966 13.5215 6.94258 13.4028L9.32549 13.0623C9.65799 13.0148 10.1251 12.7773 10.3705 12.5398L16.6088 6.3015C17.6855 5.22483 18.1922 3.974 16.6088 2.39067C15.0255 0.807334 13.7747 1.314 12.698 2.39067Z"
+                        stroke="#666666"
+                        stroke-opacity="0.6"
+                        stroke-miterlimit="10"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
                   </div>
                 </div>
 
@@ -439,6 +464,11 @@
     function goToEdit() {
       document.getElementById("step1").style.display = "none";
       document.getElementById("step2").style.display = "block";
+    }
+    function goToEditNumber() {
+      const phoneField = document.getElementById("phone");
+      phoneField.disabled = false;
+      phoneField.focus();
     }
 
     function updateEmail() {
