github issue fixed

--- a/index.html
+++ b/index.html
@@ -2525,6 +2525,14 @@
       </div>
     </div>
   </section>
+  <!-- UHC Mobile Fixed section -->
+  <section class="uhc-mobile">
+    <div class="uhc-mobile-text">
+      <h5>Ultimate Health Challenge</h5>
+      <p>Reach your peak health in 21 Days</p>
+    </div>
+    <a href="#register-now-form" class="uhc-mobile-button">Register</a>
+  </section>
   <footer class="footer-bottom">
     <div class="container-class footer-data">
       <img class="logo-footer"
